     not add one before EOF.

491) The lexer state is now reset to its initial value on EOF. 
     Previously, the state was not reset between parser invocations
     which could cause problems for visudo in rare cases.

492) Added support for Defaults that apply based on the RunasUser.

493) Sudo now includes copies of strlc{at,py} and uses them throughout.

494) Sudo is now careful to avoid interger overflow when allocating
     memory.  This is one of those "should not happen" situations.

495) Added a configure option (--with-stow) to make sudo compatible
     with GNU stow.

496) auth/kerb5.c now compiles under Heimdal.

497) The volatile prefix is used in the hopes of preventing compilers
     from optimizing away memory zeroing.  Unfortunately, this results
     in some warnings from gcc.

498) Better Kerberos IV/V support in the configure script.

499) Fixed a logic thinko in the SIGCHLD handler that caused problems
     with rlogin on HP-UX.

500) configure now adds -R to LDFLAGS when it adds -L for Solaris and
     SVR4.  There is a configure option, --with-rpath, to control this.

501) On AIX, configure will pass extra directory paths to the linker
     via the -blibpath ld option.  This is only active when additional
     library paths are used.  It may be disabled via the
     --without-blibpath configure option.

502) The --with-skey and --with-opie configure options now take
     an optional directory argument that should have an include and
     lib dir for the skey/opie include file and library respectively.

Sudo 1.6.7 released.

503) Fixed false positives in the overflow detection of expand_prompt().

Sudo 1.6.7p1 released.

504) An unterminated comment broke Kerberos V authentication.

505) The krb5-config script is used to determine Kerberos V CPPFLAGS
     and LDFLAGS/LIBS if it exists.

506) Backed out changes to mkinstalldirs from autoconf 2.57 that
     caused problems on Tru64 Unix.

Sudo 1.6.7p2 released.